--- a/my-flask-app/app/static/css/styles.css
+++ b/my-flask-app/app/static/css/styles.css
@@ -98,3 +98,23 @@ button:hover span{
 button:hover{
     border: none;
 }
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+    margin: 20px 0;
+    font-size: 18px;
+    text-align: left;
+}
+th, td {
+    padding: 12px;
+    border-bottom: 1px solid #ddd;
+}
+th {
+    background-color: #097e92;
+    color: white;
+}
+tr:hover {
+    background-color: #f5f5f552;
+    color: #000;
+}
