--- a/my-flask-app/app/templates/log.html
+++ b/my-flask-app/app/templates/log.html
@@ -3,13 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vision Connect</title>
+    <title>Motion Log</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
 </head>
 <body>
-   <div class="banner">
     <div class="navbar">
-        <img src="{{ url_for('static', filename='images/logo.png') }}" class="logo">
         <ul>
             <li><a href="{{ url_for('index') }}">Home</a></li>
             <li><a href="{{ url_for('log') }}">Log</a></li>
@@ -18,13 +16,23 @@
         </ul>
     </div>
     <div class="content">
-        <h1>WELCOME TO VISION CONNECT</h1>
-        <p>Connecting the world with the power of technology</p>
-
-        <div>
-            <button type="button"onclick="window.location.href='{{ url_for('log') }}'"><span></span>LEARN MORE</button>
-            <button type="button" onclick="window.location.href='https://accounts.google.com/signin'"><span></span>LOGIN WITH GOOGLE</button>
-        </div>
+        <h1>Motion Detection Log</h1>
+        <table>
+            <tr>
+                <th>User</th>
+                <th>Timestamp</th>
+                <th>Device ID</th>
+                <th>Status</th>
+            </tr>
+            {% for log in logs %}
+            <tr>
+                <td>{{ log.user }}</td>
+                <td>{{ log.timestamp }}</td>
+                <td>{{ log.device_id }}</td>
+                <td>{{ log.status }}</td>
+            </tr>
+            {% endfor %}
+        </table>
     </div>
 </body>
 </html>
